// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CacheableImage renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
    Test CacheableImage Component
  </Text>
  <Image
    style={
      Object {
        "height": 204,
        "width": 150,
      }
    }
  />
</View>
`;

exports[`CacheableImage renders correctly with placeholder option set 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
    Test CacheableImage Component
  </Text>
  <Image
    style={
      Object {
        "backgroundColor": "#dc143c",
        "height": 204,
        "width": 150,
      }
    }
  />
</View>
`;

exports[`CacheableImage renders correctly with placeholder prop set 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
    Test CacheableImage Component
  </Text>
  <Image
    style={undefined}
  />
</View>
`;
